tests/ui/traits/const-traits/ice-123664-unexpected-bound-var.stderr
error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/ice-123664-unexpected-bound-var.rs:4:34
   |
LL | const fn with_positive<F: ~const Fn()>() {}
   |                                  ^^^^

error: aborting due to 2 previous errors

